# Basic-to-Advanced-Backend-in-Python

./: create_tables.py  database.py  main.py  models.py  pyproject.toml  repro_pwdlib.py  requirements.txt
alembic/: env.py
alembic/versions/: 48bc3c91ee8a_create_exchange_tables.py
backend/: main.py
backend/api/: auth.py
backend/core/: database.py  security.py
backend/models/: __init__.py  instrument.py  order.py  trade.py  user.py  wallet.py
backend/schemas/: auth.py
