[project]
name = "python-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pwdlib>=0.3.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.46",
]
